--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "finnhub": "^1.2.16",
+    "mdb-react-ui-kit": "^6.0.0",
+    "mdbootstrap": "^4.20.0",
     "plotly.js": "^2.20.0",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-plotly.js": "^2.6.0",
