--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "finnhub": "^1.2.16",
+    "google-map-react": "^2.2.0",
+    "leaflet": "^1.9.3",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbootstrap": "^4.20.0",
     "plotly.js": "^2.20.0",
@@ -22,6 +24,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-leaflet": "^4.2.1",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
